--- a/job-portal-client/src/App.css
+++ b/job-portal-client/src/App.css
@@ -33,9 +33,15 @@ li {
 
 .card {
   margin: 20px;
-  border: 1px solid #ededed;
+  border: 1.5px solid #ededed;
   padding: 20px;
   cursor: pointer;
+  border-radius: 15px;
+  transition: box-shadow 0.3s ease;
+}
+
+.card:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 
