--- a/job-portal-client/src/App.css
+++ b/job-portal-client/src/App.css
@@ -36,7 +36,7 @@ li {
   border: 1.5px solid #ededed;
   padding: 20px;
   cursor: pointer;
-  border-radius: 15px;
+  border-radius: 1rem;
   transition: box-shadow 0.3s ease;
 }
 
